--- a/index.html
+++ b/index.html
@@ -136,25 +136,29 @@
 						<h2 class="subtitle">About me</h2>
 						<!-- <h3 class="title">Team player + decision maker + innovator</h3> -->
 						<p>
-							With several years of hands-on experience, I bring a practical background in full
-							stack development. My work is driven by curiosity, attention to detail, and
-							persistence to innovate and tackle complex problems. With a track record of building
-							intuitive websites and applications, I am passionate about creating seamless user
-							experiences.
+							Full Stack Developer with a passion for creating beautiful and functional user
+							interfaces using performant and reusable components.
 						</p>
 						<p>
-							As a Full Stack Developer at Milborne Group, I handle the continuous development and
-							maintenance of our cutting-edge real estate sales web app. My responsibilities include
-							bug resolution, code quality enhancement, user experience upgrades, and the addition
-							of new features to align with evolving business demands.
+							With several years of hands-on experience and a strong foundation in graphic design
+							and marketing, I specialize in frontend development and user experience optimization,
+							consistently delivering intuitive and engaging websites and applications.
+						</p>
+						<p>
+							At Milborne Group, I handle the continuous development and maintenance of our
+							cutting-edge real estate sales web app. My responsibilities include bug resolution,
+							code quality enhancement, user experience upgrades, and the addition of new features
+							to align with evolving business demands.
 							<a href="#experience">Learn more</a>.
 						</p>
 						<p>
 							I am a Juno College of Technology graduate, specializing in web development, with over
 							20 years of experience in the field of web design. Additionally, I hold a Bachelor's
-							Degree in Social Communications with a specialization in Marketing. As a lifelong
-							learner, I am always seeking out new opportunities to expand my knowledge and skills
-							as a developer.
+							Degree in Social Communications with a specialization in Marketing.
+						</p>
+						<p>
+							As a lifelong learner, I am always seeking out new opportunities to expand my
+							knowledge and skills as a developer.
 						</p>
 						<p>
 							To learn more about my top talents, work style, and preferences, please visit my
