--- a/index.html
+++ b/index.html
@@ -136,13 +136,9 @@
 						<h2 class="subtitle">About me</h2>
 						<!-- <h3 class="title">Team player + decision maker + innovator</h3> -->
 						<p>
-							Full Stack Developer with a passion for creating beautiful and functional user
-							interfaces using performant and reusable components.
-						</p>
-						<p>
-							With several years of hands-on experience and a strong foundation in graphic design
-							and marketing, I specialize in frontend development and user experience optimization,
-							consistently delivering intuitive and engaging websites and applications.
+							With several years of hands-on experience in full stack development, and a strong
+							foundation in graphic design and marketing, I specialize in creating beautiful and
+							functional user interfaces through the use of performant and reusable components.
 						</p>
 						<p>
 							At Milborne Group, I handle the continuous development and maintenance of our
