--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							functional user interfaces through the use of performant and reusable components.
 						</p>
 						<p>
-							At Milborne Group, I handle the continuous development and maintenance of our
+							At Milborne Group, I handle the continuous development and maintenance of a
 							cutting-edge real estate sales web app. My responsibilities include bug resolution,
 							code quality enhancement, user experience upgrades, and the addition of new features
 							to align with evolving business demands.
