update resume file and wording

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<p>
 							With several years of hands-on experience in full stack development, and a strong
 							foundation in graphic design and marketing, I specialize in creating beautiful and
-							functional user interfaces through the use of performant and reusable components.
+							functional user interfaces via performant and reusable components.
 						</p>
 						<p>
 							At Milborne Group, I handle the continuous development and maintenance of a
@@ -609,7 +609,7 @@
 								</li>
 								<li>
 									Developed a reusable and performant autocomplete form field component optimized
-									for loading and searching through over 5,000 brokers. The backend features a
+									for loading and searching through over 10,000 brokers. The backend features a
 									GraphQL resolver with MongoDB aggregation for dynamic full name concatenation and
 									efficient filtering. I implemented pagination and sorting directly in the
 									database, significantly reducing page loading times while delivering both sorted
@@ -727,7 +727,7 @@
 							You can send me a message or book a virtual meeting on my
 							<a href="https://calendly.com/fcthiesen/virtual-meeting" target="_blank">Calendly</a>.
 						</p> -->
-						<p><a href="mailto:fcthiesen@gmail.com">fcthiesen@gmail.com</a></p>
+						<p><a href="mailto:fthiesen@protonmail.com">fthiesen@protonmail.com</a></p>
 						<ul>
 							<li>
 								<a href="https://github.com/fthiesen/" target="_blank">
