--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
 			name="description"
-			content="With several years of hands-on experience, I bring a practical background in full stack development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences."
+			content="With several years of hands-on experience, I bring a practical background in front end  development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences."
 		/>
-		<meta name="keywords" content="Full Stack Developer, Web Designer, Toronto, Fernanda Thiesen" />
+		<meta name="keywords" content="Front End Developer, Web Designer, Toronto, Fernanda Thiesen" />
 		<meta name="author" content="Fernanda Thiesen" />
 		<meta property="og:image" content="./assets/fernanda-thiesen.jpg" />
 		<meta
 			property="og:image:alt"
-			content="Fernanda Thiesen - Full stack developer with experience in graphic design and marketing"
+			content="Fernanda Thiesen - Front end developer with experience in graphic design and marketing"
 		/>
 
 		<script
@@ -103,7 +103,7 @@
 			}
 		</style>
 
-		<title>Fê Codes - Fernanda Thiesen - Ful Stack Developer - Toronto</title>
+		<title>Fê Codes - Fernanda Thiesen - Front End Developer - Toronto</title>
 	</head>
 	<body>
 		<header>
@@ -113,7 +113,7 @@
 				</div>
 				<div class="content">
 					<h5>Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fê!</h5>
-					<h1>A full stack developer in Toronto</h1>
+					<h1>A front end developer in Toronto</h1>
 					<h2>with experience in graphic design and marketing</h2>
 					<div class="buttons">
 						<a href="#about" class="btn btn2">About me</a>
@@ -136,9 +136,10 @@
 						<h2 class="subtitle">About me</h2>
 						<!-- <h3 class="title">Team player + decision maker + innovator</h3> -->
 						<p>
-							With several years of hands-on experience in full stack development, and a strong
-							foundation in graphic design and marketing, I specialize in creating beautiful and
-							functional user interfaces via performant and reusable components.
+							With several years of hands-on experience in front-end development, a solid foundation
+							in graphic design and marketing, and exposure to backend technologies, I specialize in
+							crafting beautiful and functional user interfaces using performant and reusable
+							components.
 						</p>
 						<p>
 							At Milborne Group, I handle the continuous development and maintenance of a
@@ -576,7 +577,7 @@
 					<h2 class="subtitle">Experience</h2>
 					<div class="columns">
 						<div>
-							<h3 class="title">Full Stack Developer (2021-Present)</h3>
+							<h3 class="title">Full Stack Developer (Jun 2021 - Present)</h3>
 							<h4>Milborne Group</h4>
 							<p>
 								As a Full Stack Developer at Milborne, I enhance and maintain a real estate sales
@@ -647,7 +648,7 @@
 							</ul>
 						</div>
 						<div>
-							<h3 class="title">Web Designer (1999-2021)</h3>
+							<h3 class="title">Web Designer (Dec 1999 - May 2021)</h3>
 							<h4>Freelancer</h4>
 							<ul>
 								<li>
@@ -665,7 +666,7 @@
 									and server issues for clients.
 								</li>
 							</ul>
-							<h3 class="title">Editor-in-chief, Marketer, Web Designer (2009-2022)</h3>
+							<h3 class="title">Editor-in-chief, Marketer, Web Designer (Mar 2009 - May 2021)</h3>
 							<h4>OiCanada / Self-Employed</h4>
 							<ul>
 								<li>
@@ -701,15 +702,17 @@
 			<section id="education" class="education">
 				<div class="wrapper">
 					<h2 class="subtitle">Education</h2>
-					<h3 class="title">Juno College Certificate (2020-2021)</h3>
+					<h3 class="title">Juno College Certificate (Nov 2020 - Mar 2021)</h3>
 					<ul>
 						<li>Web Development Immersive Bootcamp</li>
 						<li>Intro JavaScript Fundamentals</li>
 						<li>Intro to Web Development</li>
 					</ul>
-					<h3 class="title">Bachelor’s Degree in Social Communications and Marketing (2001)</h3>
+					<h3 class="title">
+						Bachelor’s Degree in Social Communications and Marketing (Aug 1995 - Jun 2001)
+					</h3>
 					<p>FACHA - Faculdades Integradas Hélio Alonso, Brazil</p>
-					<h3 class="title">Technical School Certificate in Advertising (1997)</h3>
+					<h3 class="title">Technical School Certificate in Advertising (Aug 1996 - Jun 1977)</h3>
 					<p>ETEC - Escola Técnica de Comunicação, Brazil</p>
 				</div>
 			</section>
