--- a/redesign.html
+++ b/redesign.html
@@ -250,7 +250,7 @@
 							You can send me a message or book a virtual meeting on my
 							<a href="https://calendly.com/fcthiesen/virtual-meeting" target="_blank">Calendly</a>.
 						</p> -->
-						<p><a href="mailto:fcthiesen@gmail.com">fcthiesen@gmail.com</a></p>
+						<p><a href="mailto:fthiesen@protonmail.com">fthiesen@protonmail.com</a></p>
 						<ul>
 							<li>
 								<a href="https://github.com/fthiesen/" target="_blank">
