small wording fix

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<p>
 							With several years of hands-on experience in front-end development, a solid foundation
 							in graphic design and marketing, and exposure to backend technologies, I specialize in
-							crafting beautiful and functional user interfaces using performant and reusable
+							crafting beautiful and functional user interfaces with performant and reusable
 							components.
 						</p>
 						<p>
