update experience content

--- a/index.html
+++ b/index.html
@@ -586,43 +586,35 @@
 							</p>
 							<ul>
 								<li>
-									Successfully planned, designed, and developed features to automate new project
-									setups, significantly cutting down on manual tasks and redirecting the development
-									team’s focus to more strategic initiatives.
-								</li>
-								<li>
-									Independently built a feature that allows admins to customize purchase and sale
-									agreements by using unit and deal details as conditions to dynamically insert
-									specific documents at designated points within the contract. This ensures each
-									deal is fully customized.
-								</li>
-								<li>
-									Actively and consistently proposed and implemented UI enhancements to boost visual
-									experience and usability. This includes designing tables and chart reports that
-									improved data analysis and visualization, thereby facilitating decision-making.
-								</li>
-								<li>
-									Independently redesigned the entire app utilizing Material UI styles in accordance
-									with a newly established brand identity provided by a design agency, bridging the
-									design gaps for areas that were not covered, ensuring a seamless and consistent
-									design throughout the app.
+									Independently redesigned the entire application, consisting of over 500 files and
+									80,000 lines of code, utilizing Material UI styles in accordance with a newly
+									established brand identity provided by a design agency. Bridged design gaps for
+									areas that were not covered, ensured a seamless and consistent design throughout
+									the app, centralized styles in a theme file supporting both light and dark modes,
+									and created reusable styled components.
 									<a href="/redesign.html">See before/after screenshots</a>.
+								</li>
+								<li>
+									Meticulously created a reusable component utilizing Material React Table with
+									added remote pagination, search, filter, and sort functionalities, increasing
+									performance by approximately 437 times and reducing load times from 7 seconds to
+									16 milliseconds for a large dataset of over 10,000 contacts.
 								</li>
 								<li>
 									Developed a reusable and performant autocomplete form field component optimized
 									for loading and searching through over 10,000 brokers. The backend features a
 									GraphQL resolver with MongoDB aggregation for dynamic full name concatenation and
-									efficient filtering. I implemented pagination and sorting directly in the
-									database, significantly reducing page loading times while delivering both sorted
-									results and total match counts in a single query. On the frontend, I designed an
-									advanced autocomplete interface using React and Material-UI's TextField and
-									Popper, tailored for enhanced usability with custom styles and keyboard
-									accessibility. It includes a debounce mechanism for the search input to minimize
-									server load and improve responsiveness. I integrated the IntersectionObserver to
-									implement infinite scrolling, seamlessly loading additional data as the user
-									scrolls. This approach, combined with the ability to cancel obsolete requests via
-									the AbortController, ensures that the UI remains efficient and responsive to user
-									interactions, even with large datasets.
+									efficient filtering. Implemented pagination and sorting directly in the database,
+									significantly reducing page loading times while delivering both sorted results and
+									total match counts in a single query. On the frontend, designed an advanced
+									autocomplete interface using React and Material-UI's TextField and Popper,
+									tailored for enhanced usability with custom styles and keyboard accessibility. It
+									includes a debounce mechanism for the search input to minimize server load and
+									improve responsiveness. Integrated the IntersectionObserver to implement infinite
+									scrolling, seamlessly loading additional data as the user scrolls. This approach,
+									combined with the ability to cancel obsolete requests via the AbortController,
+									ensures that the UI remains efficient and responsive to user interactions, even
+									with large datasets.
 								</li>
 								<li>
 									Designed and developed a feature that tracks opened emails using a tracking pixel
@@ -645,27 +637,25 @@
 									UI, which involved handling significant breaking changes related to the React Hook
 									Form library, MUI Date Component and Apollo Client.
 								</li>
+								<li>
+									Successfully planned, designed, and developed features to automate new project
+									setups, significantly cutting down on manual tasks and redirecting the development
+									team’s focus to more strategic initiatives.
+								</li>
+								<li>
+									Independently built a feature that allows admins to customize purchase and sale
+									agreements by using unit and deal details as conditions to dynamically insert
+									specific documents at designated points within the contract. This ensures each
+									deal is fully customized.
+								</li>
+								<li>
+									Actively and consistently proposed and implemented UI enhancements to boost visual
+									experience and usability. This includes designing tables and chart reports that
+									improved data analysis and visualization, thereby facilitating decision-making.
+								</li>
 							</ul>
 						</div>
 						<div>
-							<h3 class="title">Web Designer (Dec 1999 - May 2021)</h3>
-							<h4>Freelancer</h4>
-							<ul>
-								<li>
-									Engaged with hundreds of small business owners and managers, uncovering their
-									needs and suggesting marketing and graphic design ideas as well as WordPress
-									functionalities and website solutions within their budgets.
-								</li>
-								<li>
-									Designed and customized WordPress themes to match the clients' brand guidelines,
-									introduced plugins to make the websites more interactive, optimized them for SEO,
-									and provided content updates and technical support.
-								</li>
-								<li>
-									Worked both individually and with hosting support teams to troubleshoot WordPress
-									and server issues for clients.
-								</li>
-							</ul>
 							<h3 class="title">Editor-in-chief, Marketer, Web Designer (Mar 2009 - May 2021)</h3>
 							<h4>OiCanada / Self-Employed</h4>
 							<ul>
@@ -693,6 +683,32 @@
 									Successfully published more than 1,500 pieces in Portuguese covering tourism,
 									language schools, universities, colleges, high school programs, immigration, work,
 									and culture.
+								</li>
+							</ul>
+							<h3 class="title">Web Designer (Dec 1999 - May 2021)</h3>
+							<h4>Freelancer</h4>
+							<ul>
+								<li>
+									Engaged with hundreds of small business owners and managers, uncovering their
+									needs and suggesting marketing and graphic design ideas as well as WordPress
+									functionalities and website solutions within their budgets.
+								</li>
+								<li>
+									Designed and customized WordPress themes to match the clients' brand guidelines,
+									introduced plugins to make the websites more interactive, optimized them for SEO,
+									and provided content updates and technical support.
+								</li>
+								<li>
+									Worked both individually and with hosting support teams to troubleshoot WordPress
+									and server issues for clients.
+								</li>
+								<li>
+									Partnered with Fabrica Digital, a renowned Brazilian company known for developing
+									a robust and secure CMS designed for large corporations, including national banks.
+									Selected as their front-end developer for a prestigious project involving the
+									creation of multiple websites for The National Archives of Brazil, an institution
+									responsible for the management, preservation, and dissemination of federal
+									government documents.
 								</li>
 							</ul>
 						</div>
