--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
 			name="description"
-			content="With several years of hands-on experience, I bring a practical background in front end  development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences."
+			content="With several years of hands-on experience in full-stack development, a strong focus on UI/UX, and a solid foundation in graphic design and marketing, I specialize in crafting beautiful and functional user interfaces using performant and reusable components."
 		/>
-		<meta name="keywords" content="Front End Developer, Web Designer, Toronto, Fernanda Thiesen" />
+		<meta name="keywords" content="Full-Stack Developer, Web Designer, Toronto, Fernanda Thiesen" />
 		<meta name="author" content="Fernanda Thiesen" />
 		<meta property="og:image" content="./assets/fernanda-thiesen.jpg" />
 		<meta
 			property="og:image:alt"
-			content="Fernanda Thiesen - Front end developer with experience in graphic design and marketing"
+			content="Fernanda Thiesen - Full-stack developer with a strong focus on UI/UX"
 		/>
 
 		<script
@@ -103,7 +103,7 @@
 			}
 		</style>
 
-		<title>Fê Codes - Fernanda Thiesen - Front End Developer - Toronto</title>
+		<title>Fê Codes - Fernanda Thiesen - Full-Stack Developer - Toronto</title>
 	</head>
 	<body>
 		<header>
@@ -113,8 +113,8 @@
 				</div>
 				<div class="content">
 					<h5>Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fê!</h5>
-					<h1>A front end developer in Toronto</h1>
-					<h2>with experience in graphic design and marketing</h2>
+					<h1>A full-stack developer in Toronto</h1>
+					<h2>with a strong focus on UI/UX</h2>
 					<div class="buttons">
 						<a href="#about" class="btn btn2">About me</a>
 						<a href="#contact" class="btn btn2">Get in touch</a>
@@ -136,9 +136,9 @@
 						<h2 class="subtitle">About me</h2>
 						<!-- <h3 class="title">Team player + decision maker + innovator</h3> -->
 						<p>
-							With several years of hands-on experience in front-end development, a solid foundation
-							in graphic design and marketing, and exposure to backend technologies, I specialize in
-							crafting beautiful and functional user interfaces with performant and reusable
+							With several years of hands-on experience in full-stack development, a strong focus on
+							UI/UX, and a solid foundation in graphic design and marketing, I specialize in
+							crafting beautiful and functional user interfaces using performant and reusable
 							components.
 						</p>
 						<p>
@@ -577,10 +577,10 @@
 					<h2 class="subtitle">Experience</h2>
 					<div class="columns">
 						<div>
-							<h3 class="title">Full Stack Developer (Jun 2021 - Present)</h3>
+							<h3 class="title">Full-Stack Developer (Jun 2021 - Present)</h3>
 							<h4>Milborne Group</h4>
 							<p>
-								As a Full Stack Developer at Milborne, I enhance and maintain a real estate sales
+								As a Full-Stack Developer at Milborne, I enhance and maintain a real estate sales
 								web app, where I resolve bugs, elevate code quality, enrich user experiences, and
 								integrate new functionalities and features.
 							</p>
@@ -705,7 +705,7 @@
 								<li>
 									Partnered with Fabrica Digital, a renowned Brazilian company known for developing
 									a robust and secure CMS designed for large corporations, including national banks.
-									Selected as their front-end developer for a prestigious project involving the
+									Selected as their frontend developer for a prestigious project involving the
 									creation of multiple websites for The National Archives of Brazil, an institution
 									responsible for the management, preservation, and dissemination of federal
 									government documents.
