--- a/index.html
+++ b/index.html
@@ -860,6 +860,22 @@
 				}
 			})
 		</script>
+		<!-- stats -->
+		<script src="https://swetrix.org/swetrix.js" defer></script>
+		<script>
+			document.addEventListener('DOMContentLoaded', function () {
+				swetrix.init('SPtDcKkBYTqB')
+				swetrix.trackViews()
+			})
+		</script>
+
+		<noscript>
+			<img
+				src="https://api.swetrix.com/log/noscript?pid=SPtDcKkBYTqB"
+				alt=""
+				referrerpolicy="no-referrer-when-downgrade"
+			/>
+		</noscript>
 	</body>
 </html>
 <!-- Mockups by https://mockuphone.com/ 1.6 aspect ratio -->
