--- a/redesign-light-mode.html
+++ b/redesign-light-mode.html
@@ -358,5 +358,20 @@
 				})
 			})
 		</script>
+		<!-- stats -->
+		<script src="https://swetrix.org/swetrix.js" defer></script>
+		<script>
+			document.addEventListener('DOMContentLoaded', function () {
+				swetrix.init('SPtDcKkBYTqB')
+				swetrix.trackViews()
+			})
+		</script>
+		<noscript>
+			<img
+				src="https://api.swetrix.com/log/noscript?pid=SPtDcKkBYTqB"
+				alt=""
+				referrerpolicy="no-referrer-when-downgrade"
+			/>
+		</noscript>
 	</body>
 </html>
