--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 							components.
 						</p>
 						<p>
-							At Milborne Group, I handle the continuous development and maintenance of a
-							cutting-edge real estate sales web app. My responsibilities include bug resolution,
-							code quality enhancement, user experience upgrades, and the addition of new features
-							to align with evolving business demands.
+							In my most recent role at Milborne Group, I handled the continuous development and
+							maintenance of a cutting-edge real estate sales web app. My responsibilities included
+							bug resolution, code quality enhancement, user experience upgrades, and the addition
+							of new features to align with evolving business demands.
 							<a href="#experience">Learn more</a>.
 						</p>
 						<p>
@@ -577,12 +577,12 @@
 					<h2 class="subtitle">Experience</h2>
 					<div class="columns">
 						<div>
-							<h3 class="title">Full-Stack Developer (Jun 2021 - Present)</h3>
+							<h3 class="title">Full-Stack Developer (Jun 2021 - Sep 2024)</h3>
 							<h4>Milborne Group</h4>
 							<p>
-								As a Full-Stack Developer at Milborne, I enhance and maintain a real estate sales
-								web app, where I resolve bugs, elevate code quality, enrich user experiences, and
-								integrate new functionalities and features.
+								As a Full-Stack Developer at Milborne, I enhanced and maintained a real estate sales
+								web app, where I resolved bugs, elevated code quality, enriched user experiences,
+								and integrated new functionalities and features.
 							</p>
 							<ul>
 								<li>
